add get hand
