# internal/http_server/handlers/get_pvz_list/interface.go
@@ -1,0 +1,11 @@
+package getpvzlist
+
+import (
+	"time"
+
+	"github.com/nabishec/avito_pvz_service/internal/model"
+)
+
+type GetPVZ interface {
+	GetPVZList(startDate, endDate time.Time, page, limit int) ([]*model.PVZWithRecep, error)
+}
